--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ header
     padding: 30px 40px;
     max-width:800px;
     margin: 0 auto;
+    width:100%;
    
 }
 
@@ -75,3 +76,101 @@ input
 {
     opacity:0.6;
 }
+
+main{
+    flex:1;
+    padding:10px;
+    max-width:800px;
+    width:100%;
+    margin: auto;
+}
+
+.task-list
+{
+    padding:15px;
+}
+.task-list h2
+{
+    padding: 20px;
+    font-weight:300;
+    color:white;
+    margin-bottom:1rem;
+}
+
+
+
+
+
+/* main{
+    flex: 1 1 0%;
+    padding:2rem 1rem;
+    max-width:800px;
+    width:100%;
+    margin:0 auto;
+}
+
+.task-list
+{
+    padding:1rem;
+}
+.task-list h2
+{
+    font-size:1.5rem;
+    font-weight:300;
+    color: var(--gray);
+    margin-bottom:1rem;
+}
+#tasks .task
+
+    display:flex;
+    justify-content:space-between;
+    background-color:var(--darkest);
+    padding:1rem;
+    border-radius:1rem;
+    margin-bottom: 1rem;
+}
+#tasks .task .content{
+    flex: 1 1 0%;
+}
+#tasks .task .content .text:not(:read-only)
+{
+    color:var(--light);
+    font-size:1.125rem;
+    width:100%;
+    display:block;
+    transition:0.4s;
+}
+#tasks .task .action
+{
+    display:flex;
+    margin: 0 0.5rem;
+}
+.task .actions button{
+    
+  cursor:pointer;
+  margin:0 0.5rem;
+  font-size:1.125rem;
+  font-weight:700;
+  text-transform:uppercase;
+  transition:0.4s;
+}
+.tasks .actions button:hover
+{
+    opacity:0.8;
+}
+.tasks .actions button:active
+{
+    opacity:0.6;
+}
+
+.task .actions .edit
+{
+    background-image:linear-gradient(to right,var(--pink),var(--purple));
+    -webkit-background-clip:text;
+    -webkit-text-fill-color:transparent;
+}
+.task .actions .delete
+{
+    color:crimson;
+} */
+
