--- a/style.css
+++ b/style.css
@@ -4,69 +4,64 @@
     margin:0;
     font-family:'Fira sans',sans-serif;
 }
+
 body
 {
     display:flex;
     flex-direction:column;
     min-height:100vh;
-    background:rgba(0, 0, 0, 0.897);
-    color:white;
-   
-    
-}
-header
-{
-    padding: 30px 40px;
-    max-width:800px;
-    margin: 0 auto;
-    width:100%;
-   
+    background:#374137;
+    color:#FFF;
 }
 
-header h1
+header
 {
+    padding:2rem 1rem;
+    max-width:800px;
+    width:100%;
+    margin: 0 auto;
+}
+header h1{
     font-size:2.5rem;
     font-weight:300;
-    color:red;
+    color:var(--gray);
     margin-bottom:1rem;
 }
-#new-task
+#new-form
 {
     display:flex;
 }
-input
+input,button
 {
     appearance: none;
     border:none;
     outline:none;
     background:none;
 }
-
 #new-input
 {
-    flex:1 ;
+    flex: 1 1 0%;
     background-color:#1F2937;
     padding:1rem;
     border-radius:1rem;
     margin-right:1rem;
     color:white;
     font-size:1.25rem;
-}
 
+
+}
 #new-input::placeholder
 {
-    color:gray;
+    color:#687280;
 }
 #new-submit
 {
-   color:white;
+    color:var#EC4899;
     font-size:1.25rem;
     font-weight:700;
-    background-image:linear-gradient(to right,#EC4899,yellow);
+    background-image:linear-gradient(to right,#EC4899,#885Cf6);
     cursor:pointer;
     transition:0.4s;
-    padding:5px;
-    margin:2px;
 }
 #new-submit:hover
 {
@@ -78,30 +73,6 @@ input
 }
 
 main{
-    flex:1;
-    padding:10px;
-    max-width:800px;
-    width:100%;
-    margin: auto;
-}
-
-.task-list
-{
-    padding:15px;
-}
-.task-list h2
-{
-    padding: 20px;
-    font-weight:300;
-    color:white;
-    margin-bottom:1rem;
-}
-
-
-
-
-
-/* main{
     flex: 1 1 0%;
     padding:2rem 1rem;
     max-width:800px;
@@ -121,10 +92,10 @@ main{
     margin-bottom:1rem;
 }
 #tasks .task
-
+{
     display:flex;
     justify-content:space-between;
-    background-color:var(--darkest);
+    background-color:#111827;
     padding:1rem;
     border-radius:1rem;
     margin-bottom: 1rem;
@@ -134,7 +105,7 @@ main{
 }
 #tasks .task .content .text:not(:read-only)
 {
-    color:var(--light);
+    color:white;
     font-size:1.125rem;
     width:100%;
     display:block;
@@ -165,12 +136,12 @@ main{
 
 .task .actions .edit
 {
-    background-image:linear-gradient(to right,var(--pink),var(--purple));
+    background-image:linear-gradient(to right,#EC4899,#885Cf6);
     -webkit-background-clip:text;
     -webkit-text-fill-color:transparent;
 }
 .task .actions .delete
 {
     color:crimson;
-} */
+}
 
