--- a/style.css
+++ b/style.css
@@ -19,12 +19,12 @@ header
     padding:2rem 1rem;
     max-width:800px;
     width:100%;
-    margin: 0 auto;
+    margin:  auto;
 }
 header h1{
     font-size:2.5rem;
     font-weight:300;
-    color:var(--gray);
+    color:gray;
     margin-bottom:1rem;
 }
 #new-form
@@ -40,7 +40,7 @@ input,button
 }
 #new-input
 {
-    flex: 1 1 0%;
+    flex: 1;
     background-color:#1F2937;
     padding:1rem;
     border-radius:1rem;
@@ -73,56 +73,53 @@ input,button
 }
 
 main{
-    flex: 1 1 0%;
-    padding:2rem 1rem;
+    flex: 1;;
+    padding:5px 5px;
     max-width:800px;
-    width:100%;
-    margin:0 auto;
+    width:50%;
+    margin:auto;
 }
 
 .task-list
 {
-    padding:1rem;
+    padding:1px;;
 }
 .task-list h2
 {
     font-size:1.5rem;
     font-weight:300;
-    color: var(--gray);
+    color:red;
     margin-bottom:1rem;
 }
 #tasks .task
 {
     display:flex;
     justify-content:space-between;
-    background-color:#111827;
+    background-color:#0c0f16;
     padding:1rem;
     border-radius:1rem;
     margin-bottom: 1rem;
 }
 #tasks .task .content{
-    flex: 1 1 0%;
+    flex: 1 ;
+
 }
 #tasks .task .content .text:not(:read-only)
 {
     color:white;
-    font-size:1.125rem;
-    width:100%;
-    display:block;
-    transition:0.4s;
+     transition:0.4s;
 }
 #tasks .task .action
 {
     display:flex;
-    margin: 0 0.5rem;
+    margin: 3px;
 }
 .task .actions button{
     
   cursor:pointer;
-  margin:0 0.5rem;
-  font-size:1.125rem;
+  margin:4px;;
+  font-size:20px;
   font-weight:700;
-  text-transform:uppercase;
   transition:0.4s;
 }
 .tasks .actions button:hover
@@ -133,12 +130,9 @@ main{
 {
     opacity:0.6;
 }
-
 .task .actions .edit
 {
     background-image:linear-gradient(to right,#EC4899,#885Cf6);
-    -webkit-background-clip:text;
-    -webkit-text-fill-color:transparent;
 }
 .task .actions .delete
 {
