--- a/style.css
+++ b/style.css
@@ -4,16 +4,14 @@
     margin:0;
     font-family:'Fira sans',sans-serif;
 }
-
 body
 {
     display:flex;
     flex-direction:column;
     min-height:100vh;
-    background:#374137;
+    background:rgb(73, 69, 69);
     color:#FFF;
 }
-
 header
 {
     padding:2rem 1rem;
