--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body
     display:flex;
     flex-direction:column;
     min-height:100vh;
-    background:rgb(73, 69, 69);
+    background:rgb(177 152 139);
     color:#FFF;
 }
 header
@@ -22,9 +22,18 @@ header
 header h1{
     font-size:2.5rem;
     font-weight:300;
-    color:gray;
+    color:#3d2020;
     margin-bottom:1rem;
-   
+    text-align: center;
+}
+@media(max-width:600px)
+{
+    header h1
+    {
+        font-size:18px;
+        margin-right:180px;
+        
+    }
 }
 #new-form
 {
@@ -43,24 +52,26 @@ input,button
     background-color:#1F2937;
     padding:1rem;
     border-radius:1rem;
-    margin-right:1rem;
+    margin-right:10px;
     color:white;
     font-size:1.25rem;
-
-
 }
+
 #new-input::placeholder
 {
     color:#687280;
+    
 }
 #new-submit
 {
-    color:#EC4899;
+    color:#0a0a0a;
     font-size:1.25rem;
     font-weight:700;
-    background-image:linear-gradient(to right,#EC4899,#885Cf6);
+    background-image:linear-gradient(to right,#201a1d,#5cf68a);
     cursor:pointer;
     transition:0.4s;
+    border-radius:15px;
+    
 }
 #new-submit:hover
 {
@@ -68,7 +79,7 @@ input,button
 }
 #new-submit:active
 {
-    opacity:0.6;
+    opacity:5;
 }
 
 main{
@@ -78,7 +89,6 @@ main{
     width:50%;
     margin:auto;
 }
-
 .task-list
 {
     padding:1px;;
@@ -88,29 +98,29 @@ main{
     font-size:1.5rem;
     font-weight:300;
     color:red;
-    margin-bottom:1rem;;
+    margin-bottom:1rem;
+    text-align: center;
 }
 #tasks .task
 {
     display:flex;
     justify-content:space-between;
-    background-color:white;
-    padding:1rem;
-    border-radius:1rem;
+    background-color:rgba(43, 68, 207, 0.623);
+    padding:0.5rem;
+    border-radius:0.5rem;
     margin-bottom: 1rem;
 }
 #tasks .task .content{
     flex: 1 ;
     padding:3px ;
-    font-weight:1000;
-   
-    color:black
-
+    color:black;
 }
 #tasks .task .content .text:not(:read-only)
 {
     color:black;
     transition:0.4s;
+    
+
 }
 #tasks .task .action
 {
@@ -135,10 +145,9 @@ main{
 }
 .task .actions .edit
 {
-    background-image:linear-gradient(to right,#EC4899,#885Cf6);
+    color:crimson;
 }
 .task .actions .delete
 {
     color:crimson;
 }
-
